Overflow issues fix
fixed overflow issues and improved ui

--- a/style.scss
+++ b/style.scss
@@ -13,6 +13,10 @@ $secondaryFont: 'Source Code Pro', monospace;
 	text-decoration: none;
 }
 
+html {
+	overflow-x: hidden;
+}
+
 body {
 	font-family: $mainFont;
 	font-size: 20px;
@@ -191,6 +195,10 @@ nav {
 				border: 1px solid #666;
 				padding: 10px 20px;
 				font-size: 1.3em;
+			}
+
+			input:focus {
+				outline: none;
 			}
 
 			@media screen and (min-width: 100px) {
